# PluriHarms-release

./: .gitignore  LICENSE  PROMPT_FEATURES.md  README.md  Week1_EDA.ipynb  data_tutorial.ipynb  pyproject.toml
data/: README.md  annotations.csv  factor_loadings.csv  prompts.csv  value_topic_names.json
outputs/: disagreement_scores.csv  prompts.csv  top_disagreement_prompts.csv
pluriharms.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: constants.py  data_loader.py
src/prompt_feature/: __init__.py
src/prompt_feature/kaleido/: __init__.py  generate_kaleido.py  kaleido_sys.py
src/prompt_feature/kaleido_topic/: __init__.py  extract_top_valenced_kaleido_topics.ipynb  generate_kaleido_topics.py  kaleido_document_classifier.py  topic_model.py
src/prompt_feature/liwc/: __init__.py  liwc_analysis.py
src/utils/: __init__.py  llm_query_cache.py
topic_model_data/: topic_id_to_name_40.json  topic_info_40.csv
topic_model_data/llm_cache_40/: gpt_4o_2024_08_06_cache.jsonl
